modules/gdscript/tests/scripts/Traits/analyzer/errors/trait_cohesion_mismatch.gd
uses SomeTrait, OtherTrait
uses SomeTrait

trait SomeTrait:
		func func_one():
				print("function one")

trait OtherTrait:
		func func_one():
				print("function two")

func test():
		print("ok")
